--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,7 +1,28 @@
+.header {
+  background-color: #acacac;
+}
+
 .footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  background-color: #acacac;
+}
+
+body {
+  background-color: #cecece;
+}
+
+.treehr {
+  height: 12px;
+  border: 0;
+  -webkit-box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+}
+
+.jumbotron {
+  background-color: #cecece !important;
+}
+
+.whatsapp {
+  position: absolute !important;
+  bottom: 100px !important;
 }
 /*# sourceMappingURL=theme.css.map */
