--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1,6 +1,27 @@
+.header {
+  background-color: #acacac;
+}
+
 .footer {
-   position: absolute;
-   right: 0;
-   bottom: 0;
-   left: 0;
+   background-color: #acacac;
  }
+
+body {
+  background-color: #cecece;
+}
+
+.treehr {
+  height: 12px;
+  border: 0;
+  box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+}
+
+.jumbotron {
+  background-color: #cecece !important;
+}
+
+.whatsapp {
+  position: absolute !important;
+  // right: 50px !important;
+  bottom: 100px !important;
+}
