küçük problemler çözüldü

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -20,7 +20,12 @@ body {
   background-color: #cecece !important;
 }
 
-.whatsapp {
-  bottom: 100px !important;
+.floating-wpp-button {
+  width:40px !important;
+  height: 40px !important;
 }
 
+.bekle {
+  height: 30vh;
+  margin-top: 10vh;
+}
