--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -65,3 +65,13 @@ p {
 .usin{ color: #0066BB;}
 .paran{ color: white;}
 
+.list-group-item {
+  background-color: #cecece;
+  border-bottom: 1px solid rgb(138, 138, 138) !important;
+  padding-bottom: 0px;
+}
+
+.guncel {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
